# veterinary-medical-records

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yaml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 4de7cd845572_initial_documents_migration.py  aea5d2e3e4f4_add_run_status_to_processing_run.py  d8052f692db3_initial_documents_and_metrics_migration.py
backend/common/: celery_app.py  database.py  logging.py
backend/documents/: exceptions.py  models.py  router.py  schemas.py  storage.py  tasks.py
backend/documents/services/llm/: openai.py
backend/documents/services/structured_info/: parsers.py
backend/documents/services/text_extraction/: extractors.py
backend/metrics/: models.py  services.py  tasks.py
backend/tests/: conftest.py  test_extractors.py  test_router.py  test_storage.py
frontend/: index.html  jest.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  index.tsx  main.tsx  setupTests.ts  types.ts
frontend/src/app/: App.tsx  providers.tsx  router.tsx
frontend/src/app/layouts/: AppShell.tsx
frontend/src/pages/documents/: DocumentsPage.tsx
frontend/src/shared/ui/: FoldableSection.tsx
frontend/src/styles/: AppShell.css
frontend/tests/unit/components/: ClinicInfoSection.test.tsx  DiagnosesSection.test.tsx  MedicationsSection.test.tsx  PastMedicalIssuesSection.test.tsx  PetInfoSection.test.tsx  ProceduresSection.test.tsx  StructuredRecordForm.test.tsx
(+11 files in other folders)
